--- a/QuestPackages/core/main/waha.yml
+++ b/QuestPackages/core/main/waha.yml
@@ -1,5 +1,3 @@
-
-
 events:
   init_waha:                "folder e_obj_add_waha"
   reset_waha:               "folder e_obj_del_waha,e_obj_del_waha_delay"
@@ -13,17 +11,17 @@ events:
   e_obj_del_waha:           "objective remove o_waha"
 
   # Cooldown
-  fol_waha_cooldown_done:   "folder m64-sfx.e_waha_ready,e_obj_add_waha"
+  fol_waha_cooldown_done:   "folder core-sfx.e_waha_ready,e_obj_add_waha"
   e_obj_add_waha_delay:     "objective add o_waha_cooldown"
   e_obj_del_waha_delay:     "objective remove o_waha_cooldown"
 
   # Action
   # Normal
   exec_waha:                "if chk_waha_break exec_waha else fol_do_waha"
-  fol_do_waha:              "folder e_waha,e_obj_add_waha_delay,m64-sfx.e_waha"
+  fol_do_waha:              "folder e_waha,e_obj_add_waha_delay,core-sfx.e_waha"
   e_waha:                   "velocity vector:(0;0.7;-0.3) direction:relative_y modification:set"
   # Broken
-  fol_do_broken_waha:       "folder e_broken_waha,e_obj_add_waha_delay,m64-sfx.e_waha_broken"
+  fol_do_broken_waha:       "folder e_broken_waha,e_obj_add_waha_delay,core-sfx.e_waha_broken"
   e_broken_waha:            "velocity vector:(0;1.5;-0.3) direction:relative_y modification:set"
 
 
