--- a/QuestPackages/m64/bob/package.yml
+++ b/QuestPackages/m64/bob/package.yml
@@ -1,55 +1,57 @@
+# Regions:
+# Level entry:  bob_entry
+# Level:        bob
+# Star 2:       bob_speedrun
+# Star 8:       bob_s8_log_1,bob_s8_log_2,bob_s8_log_3,bob_s8_log_4
+# Cannons:      bob_cannon_1,bob_cannon_2,bob_cannon_3,bob_cannon_4,bob_cannon_5,bob_cannon_6,bob_cannon_7,bob_cannon_8,bob_cannon_9
+# Warps:        bob_warp_1,bob_warp_2
+
+
 variables:
   spawn:              -357.5;69;2.5;marocraft;180;12
   respawn:            -19.5;46;-431.5;marocraft;90;12
-  exitbtn:            -358;69;2;marocraft
-  warp_1:             -471;106;-68;marocraft;45;12
-  warp_2:             -470;94;-57;marocraft;45;12
+  exitsign:           -358;69;2;marocraft
 
 events:
-  init_level:         "folder add_level_objs,init_cannons,init_stars,e_tp_spawn,e_play_music"
-  reload_level:       "folder reset_level,m64-main.init_castle"
-  reset_level:        "folder del_level_objs,reset_cannons,reset_stars,e_stop_music"
-  hard_reset:         "folder reset_level,delete_stars"
-  on_death:           "folder e_notify_death,reload_level,e_point_add_death,e_gpoint_add_death"
-  on_exit:            "folder e_tp_respawn,reload_level"
+  init_level:         "folder init_spawns,init_warps,init_cannons,init_stars,e_play_music,init_redcoins"
+  deit_level:         "folder deit_spawns,deit_warps,deit_cannons,deit_stars,e_stop_music"
+  unlo_level:         "folder deit_redcoins,exit_level period:3 ticks"
+  exit_level:         "folder deit_level,e_tp_respawn,core-main.init_castle"
 
-  e_point_add_death:  "point bob_deaths 1 action:add"
-  e_gpoint_add_death: "globalpoint bob_deaths 1 action:add"
+  on_death:           "folder e_notify_death,unlo_level,e_point_add_death,e_gpoint_add_death"
+  on_exit:            "folder unlo_level"
 
-  ### Play music
-  e_play_music:       "folder m64-sfx.e_play_bob"
-  e_stop_music:       "folder m64-sfx.e_stop_music"
+  # Wipe save
+  wipe_level:         "folder wipe_stars"
 
-  ### LEVEL - Add objectives
-  add_level_objs:     "folder e_obj_add_respawn,e_obj_add_exit,e_obj_add_warp_1,e_obj_add_warp_2"
+  # Play music
+  e_play_music:       "folder core-music.e_play_bob"
+  e_stop_music:       "folder core-music.e_stop_music"
+
+  ### --- Spawn / Respawn ---------------------------------------
+  init_spawns:        "folder e_obj_add_respawn,e_obj_add_exit,e_tp_spawn"
   e_obj_add_respawn:  "objective add o_respawn"
   e_obj_add_exit:     "objective add o_exitlevel"
-  e_obj_add_warp_1:   "objective add o_warp_1"
-  e_obj_add_warp_2:   "objective add o_warp_2"
-  ### LEVEL - Del objectives
-  del_level_objs:     "folder e_obj_del_respawn,e_obj_del_exit,e_obj_del_warp_1,e_obj_del_warp_2"
+  deit_spawns:        "folder e_obj_del_respawn,e_obj_del_exit"
   e_obj_del_respawn:  "objective remove o_respawn"
   e_obj_del_exit:     "objective remove o_exitlevel"
-  e_obj_del_warp_1:   "objective remove o_warp_1"
-  e_obj_del_warp_2:   "objective remove o_warp_2"
-
-
-
 
   # Teleports
   e_tp_spawn:         "teleport $spawn$"
   e_tp_respawn:       "teleport $respawn$"
-  fol_tp_warp_1:      "folder e_tp_warp_1,m64-sfx.e_warp"
-  e_tp_warp_1:        "teleport $warp_2$"
-  fol_tp_warp_2:      "folder e_tp_warp_2,m64-sfx.e_warp"
-  e_tp_warp_2:        "teleport $warp_1$"
 
   # Actions
   e_notify_death:     "command broadcast &3%player%&f died in BOB."
+  e_point_add_death:  "point bob_deaths 1 action:add"
+  e_gpoint_add_death: "globalpoint bob_deaths 1 action:add"
+
+  # Fake blocks
+  init_redcoins:      "folder e_init_rcoins delay:1"
+  deit_redcoins:      "folder e_deit_rcoins"
+  e_init_rcoins:      "command showfakeskulls %player% bob_rc_1 bob_rc_2 bob_rc_3 bob_rc_4 bob_rc_5 bob_rc_6 bob_rc_7 bob_rc_8 bob_rc_9 bob_rc_10 bob_rc_11 bob_rc_12"
+  e_deit_rcoins:      "command hidefakeskulls %player% bob_rc_1 bob_rc_2 bob_rc_3 bob_rc_4 bob_rc_5 bob_rc_6 bob_rc_7 bob_rc_8 bob_rc_9 bob_rc_10 bob_rc_11 bob_rc_12"
 
 
 objectives:
   o_respawn:          "die cancel respawn:$respawn$ events:on_death"
-  o_exitlevel:        "action right any loc:$exitbtn$ events:on_exit"
-  o_warp_1:           "region bob_warp_1 enter events:fol_tp_warp_2 persistent"
-  o_warp_2:           "region bob_warp_2 enter events:fol_tp_warp_1 persistent"
+  o_exitlevel:        "action right any loc:$exitsign$ events:on_exit"
